tests/NormalTests/paczka1/small_fuzzy/74943566.err
Error in line 9: hB0jzi A22] 1],]
Error in line 13: K6uzqpdE A115 -3,2
